# RecipeOrganizer

./: .gitignore  README.md  claude.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Layout.tsx
src/lib/crawl/: crawlEngine.ts  index.ts
src/lib/db/: client.ts  queries.ts
src/lib/db/migrations/: 001_initial.sql
src/lib/export/: exportPack.ts  index.ts  validatePack.ts
src/lib/import/: attachImages.ts  fingerprint.ts  importMarkdown.ts  importPackJson.ts  importRecipeJson.ts  index.ts  normalize.ts  scrapeUrl.ts
src/lib/similarity/: cosine.ts  index.ts  jaccard.ts  score.ts  tfidf.ts  tokenize.ts
src/lib/suggest/: index.ts  suggestPacks.ts
src/pages/: CrawlEngine.tsx  Import.tsx  Library.tsx  Packs.tsx  RecipeDetail.tsx  Suggest.tsx
src/types/: index.ts
