[package]
name = "instaplate-recipe-manager"
version = "0.1.0"
description = "InstaPlate Recipe Manager - Offline-first desktop CMS for managing recipes"
authors = ["InstaPlate"]
edition = "2021"

[lib]
name = "instaplate_recipe_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
